# gentle-man-tg-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gentle-bot-user.service  main.py  prompts.yaml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  bot.py  config.py  database.py
app/handlers/: __init__.py  message_handler.py
app/models/: __init__.py  base.py  chat.py  context.py  message.py  user.py
app/services/: __init__.py  ai_service.py  scheduler.py  vector_store.py
deployment/: deploy.sh  gentle-man-tg-bot.service  setup.sh
src/: main.py
tests/: __init__.py  test_bot.py
